{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 37,
  "lineage": "ed847232-6737-dd28-68c0-9b68a09358f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094e85614f36b59ae",
            "association_id": "eipassoc-04cb5802adbbba64c",
            "domain": "vpc",
            "id": "eipalloc-094e85614f36b59ae",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00262e5823ebf492d",
            "private_dns": "ip-10-1-0-110.ec2.internal",
            "private_ip": "10.1.0.110",
            "public_dns": "ec2-34-231-214-86.compute-1.amazonaws.com",
            "public_ip": "34.231.214.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nateip"
            },
            "tags_all": {
              "Name": "dev-nateip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:419740680543:instance/i-06b52243f0696d10f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b52243f0696d10f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a3d1df82165811f7",
            "private_dns": "ip-10-1-4-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.4.41",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-093ef1c38efc9a2e1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5c2f3c55953ef1f",
            "tags": {
              "Name": "dev-backend"
            },
            "tags_all": {
              "Name": "dev-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d274c785497ec903"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo",
            "aws_security_group.backend-sg",
            "aws_security_group.frontend",
            "aws_subnet.privsubnets",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:419740680543:instance/i-0650b5952bc6a3ae6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0650b5952bc6a3ae6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b41f2169b53b03f",
            "private_dns": "ip-10-1-0-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.19",
            "public_dns": "ec2-44-203-28-246.compute-1.amazonaws.com",
            "public_ip": "44.203.28.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1e69b0783121890",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cc889db1c9e1190",
            "tags": {
              "Name": "dev-frontend"
            },
            "tags_all": {
              "Name": "dev-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02206c7d8909d95f7"
            ]
          },
          "dependencies": [
            "aws_key_pair.demo",
            "aws_security_group.frontend",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:internet-gateway/igw-023278f28074a1830",
            "id": "igw-023278f28074a1830",
            "owner_id": "419740680543",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094e85614f36b59ae",
            "association_id": "eipassoc-04cb5802adbbba64c",
            "connectivity_type": "public",
            "id": "nat-0657e1e3d5a9802a6",
            "network_interface_id": "eni-00262e5823ebf492d",
            "private_ip": "10.1.0.110",
            "public_ip": "34.231.214.86",
            "subnet_id": "subnet-08cc889db1c9e1190",
            "tags": {
              "Name": "dev-natgw"
            },
            "tags_all": {
              "Name": "dev-natgw"
            }
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dataroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:route-table/rtb-041ebac9d1ffc80af",
            "id": "rtb-041ebac9d1ffc80af",
            "owner_id": "419740680543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0657e1e3d5a9802a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-dataroute"
            },
            "tags_all": {
              "Name": "dev-dataroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:route-table/rtb-0db0647968d4ac2d6",
            "id": "rtb-0db0647968d4ac2d6",
            "owner_id": "419740680543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0657e1e3d5a9802a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-privateroute"
            },
            "tags_all": {
              "Name": "dev-privateroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:route-table/rtb-07146feddb02b272c",
            "id": "rtb-07146feddb02b272c",
            "owner_id": "419740680543",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023278f28074a1830",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-publicroute"
            },
            "tags_all": {
              "Name": "dev-publicroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "datasub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a48d232ddde99db",
            "route_table_id": "rtb-041ebac9d1ffc80af",
            "subnet_id": "subnet-0e136989357a57205"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0945db1a37c4c5d91",
            "route_table_id": "rtb-041ebac9d1ffc80af",
            "subnet_id": "subnet-0dd15e2885c634836"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f4138317883ea43",
            "route_table_id": "rtb-041ebac9d1ffc80af",
            "subnet_id": "subnet-0e004505c2563c404"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.dataroute",
            "aws_subnet.datasubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privsub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0f87650df24a8b0",
            "route_table_id": "rtb-0db0647968d4ac2d6",
            "subnet_id": "subnet-025d4ed6ba51fb06c"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.privateroute",
            "aws_subnet.privsubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024e7383d521e5aff",
            "route_table_id": "rtb-0db0647968d4ac2d6",
            "subnet_id": "subnet-0f5c2f3c55953ef1f"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.privateroute",
            "aws_subnet.privsubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c74ea0a7a2620c56",
            "route_table_id": "rtb-0db0647968d4ac2d6",
            "subnet_id": "subnet-0763daa60906013ba"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.natgw",
            "aws_route_table.privateroute",
            "aws_subnet.privsubnets",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsub-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022e9f9e4d1820323",
            "route_table_id": "rtb-07146feddb02b272c",
            "subnet_id": "subnet-08cc889db1c9e1190"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc2070ad7f66df0",
            "route_table_id": "rtb-07146feddb02b272c",
            "subnet_id": "subnet-07ec274afc06dc32c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3ab44224498e9af",
            "route_table_id": "rtb-07146feddb02b272c",
            "subnet_id": "subnet-0177ec129c2b1d2f7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.publicroute",
            "aws_subnet.pubsubnets",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:security-group/sg-0d274c785497ec903",
            "description": "Allow http and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d274c785497ec903",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02206c7d8909d95f7"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "419740680543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-backend-sg"
            },
            "tags_all": {
              "Name": "dev-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.frontend",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:security-group/sg-02206c7d8909d95f7",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02206c7d8909d95f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend",
            "name_prefix": "",
            "owner_id": "419740680543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-frontendsg"
            },
            "tags_all": {
              "Name": "dev-frontendsg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:security-group/sg-00c465fcb99fa5444",
            "description": "Allow 8080 and ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c465fcb99fa5444",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ssh from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02206c7d8909d95f7"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "ssh from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d274c785497ec903"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "419740680543",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-rdssg"
            },
            "tags_all": {
              "Name": "dev-rdssg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.backend-sg",
            "aws_security_group.frontend",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "datasubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-0e136989357a57205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e136989357a57205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-datasubnet-1"
            },
            "tags_all": {
              "Name": "dev-datasubnet-1"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-0dd15e2885c634836",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd15e2885c634836",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-datasubnet-2"
            },
            "tags_all": {
              "Name": "dev-datasubnet-2"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-0e004505c2563c404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e004505c2563c404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-datasubnet-3"
            },
            "tags_all": {
              "Name": "dev-datasubnet-3"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-025d4ed6ba51fb06c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025d4ed6ba51fb06c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-privatesub-1"
            },
            "tags_all": {
              "Name": "dev-privatesub-1"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-0f5c2f3c55953ef1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5c2f3c55953ef1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-privatesub-2"
            },
            "tags_all": {
              "Name": "dev-privatesub-2"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-0763daa60906013ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0763daa60906013ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-privatesub-3"
            },
            "tags_all": {
              "Name": "dev-privatesub-3"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-08cc889db1c9e1190",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cc889db1c9e1190",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pubsubnet-1"
            },
            "tags_all": {
              "Name": "dev-pubsubnet-1"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-07ec274afc06dc32c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ec274afc06dc32c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pubsubnet-2"
            },
            "tags_all": {
              "Name": "dev-pubsubnet-2"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:subnet/subnet-0177ec129c2b1d2f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0177ec129c2b1d2f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419740680543",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-pubsubnet-3"
            },
            "tags_all": {
              "Name": "dev-pubsubnet-3"
            },
            "vpc_id": "vpc-06fc52902b5514f9d"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:419740680543:vpc/vpc-06fc52902b5514f9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0e0b9f504c9b57d0c",
            "default_route_table_id": "rtb-01bf32bfa5fa2de3e",
            "default_security_group_id": "sg-0b6acd1172fbe71f7",
            "dhcp_options_id": "dopt-0b5cfec1c5b93cb4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06fc52902b5514f9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01bf32bfa5fa2de3e",
            "owner_id": "419740680543",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}